# metal_performance_testing

./: HOWTO.md
metal_performance_testing/: CMakeLists.txt  Matrix.h  MatrixMultiplier.cpp  MatrixMultiplier.h  Utilities.cpp  Utilities.h  driver_processing.md  main.cpp  mat_mul_simple1.metal  perf_test.sh
